<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:id="@+id/cardView">

        <RelativeLayout
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2.0"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/labelName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_name" />

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutVin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayoutName"
                android:orientation="horizontal"
                android:weightSum="2.0"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/labelVin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_vin" />

                <TextView
                    android:id="@+id/vinTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutExterior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayoutVin"
                android:orientation="horizontal"
                android:weightSum="2.0"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/labelExterior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_exterior" />

                <TextView
                    android:id="@+id/exteriorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutInterior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayoutExterior"
                android:orientation="horizontal"
                android:weightSum="2.0"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/labelInterior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_interior" />

                <TextView
                    android:id="@+id/interiorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutEngine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayoutInterior"
                android:orientation="horizontal"
                android:weightSum="2.0"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/labelEngine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_engineType" />

                <TextView
                    android:id="@+id/engineTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutFuel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayoutEngine"
                android:orientation="horizontal"
                android:weightSum="2.0"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/labelFuel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_fuel" />

                <TextView
                    android:id="@+id/fuelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutCoordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayoutFuel"
                android:orientation="horizontal"
                android:weightSum="2.0"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/labelCoordinates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_coordinates" />

                <TextView
                    android:id="@+id/coordinatesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayoutCoordinates"
                android:orientation="horizontal"
                android:weightSum="2.0"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/labelAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_address" />

                <TextView
                    android:id="@+id/addressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>